@@ -1,18 +1,22 @@
 package org.enso.runner;
 
 import java.io.File;
+import java.io.FileReader;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
@@ -30,10 +34,14 @@ import org.enso.common.ContextFactory;
 import org.enso.common.DebugServerInfo;
 import org.enso.common.HostEnsoUtils;
 import org.enso.common.LanguageInfo;
+import org.enso.common.PythonHomeFinder;
 import org.enso.distribution.DistributionManager;
 import org.enso.distribution.Environment;
 import org.enso.editions.DefaultEdition;
+import org.enso.jvm.channel.JVM;
 import org.enso.libraryupload.LibraryUploader.UploadFailedError;
+import org.enso.logger.Converter;
+import org.enso.logger.ObservedMessage;
 import org.enso.pkg.Contact;
 import org.enso.pkg.PackageManager;
 import org.enso.pkg.PackageManager$;
@@ -41,8 +49,7 @@ import org.enso.pkg.Template;
 import org.enso.polyglot.Module;
 import org.enso.polyglot.PolyglotContext;
 import org.enso.polyglot.debugger.DebuggerSessionManagerEndpoint;
-import org.enso.profiling.sampler.NoopSampler;
-import org.enso.profiling.sampler.OutputStreamSampler;
+import org.enso.profiling.sampler.MethodsSampler;
 import org.enso.runner.common.LanguageServerApi;
 import org.enso.runner.common.ProfilingConfig;
 import org.enso.runner.common.WrongOption;
@@ -52,12 +59,13 @@ import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.PolyglotException.StackFrame;
 import org.graalvm.polyglot.SourceSection;
 import org.graalvm.polyglot.io.MessageTransport;
+import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.slf4j.MDC;
 import org.slf4j.event.Level;
 import scala.Option$;
 import scala.concurrent.ExecutionContext;
 import scala.concurrent.ExecutionContextExecutor;
-import scala.concurrent.duration.FiniteDuration;
 import scala.runtime.BoxedUnit;
 
 /** The main CLI entry point class. */
@@ -87,9 +95,9 @@ public class Main {
   private static final String NO_READ_IR_CACHES_OPTION = "no-read-ir-caches";
   private static final String DISABLE_PRIVATE_CHECK_OPTION = "disable-private-check";
   private static final String ENABLE_STATIC_ANALYSIS_OPTION = "enable-static-analysis";
+  private static final String TREAT_WARNINGS_AS_ERRORS_OPTION = "Werror";
   private static final String COMPILE_OPTION = "compile";
   private static final String NO_COMPILE_DEPENDENCIES_OPTION = "no-compile-dependencies";
-  private static final String NO_GLOBAL_CACHE_OPTION = "no-global-cache";
   private static final String LOG_LEVEL = "log-level";
   private static final String LOGGER_CONNECT = "logger-connect";
   private static final String NO_LOG_MASKING = "no-log-masking";
@@ -104,7 +112,7 @@ public class Main {
 
   private static final String DEFAULT_MAIN_METHOD_NAME = "main";
 
-  private static final org.slf4j.Logger logger = LoggerFactory.getLogger(Main.class);
+  private static final Logger LOGGER = LoggerFactory.getLogger(Main.class);
 
   Main() {}
 
@@ -295,6 +303,30 @@ public class Main {
             .longOpt(LanguageServerApi.ROOT_ID_OPTION)
             .desc("Content root id.")
             .build();
+    var projectIdOption =
+        cliOptionBuilder()
+            .hasArg(true)
+            .numberOfArgs(1)
+            .argName("uuid")
+            .longOpt(LanguageServerApi.PROJECT_ID_OPTION)
+            .desc("Project id.")
+            .build();
+    var cloudProjectIdOption =
+        cliOptionBuilder()
+            .hasArg(true)
+            .numberOfArgs(1)
+            .argName("id")
+            .longOpt(LanguageServerApi.CLOUD_PROJECT_ID_OPTION)
+            .desc("Cloud project id (hybrid).")
+            .build();
+    var cloudProjectSessionIdOption =
+        cliOptionBuilder()
+            .hasArg(true)
+            .numberOfArgs(1)
+            .argName("id")
+            .longOpt(LanguageServerApi.CLOUD_PROJECT_SESSION_ID_OPTION)
+            .desc("Cloud project session id (hybrid).")
+            .build();
     var pathOption =
         cliOptionBuilder()
             .hasArg(true)
@@ -330,8 +362,9 @@ public class Main {
             .argName("log-level")
             .longOpt(LOG_LEVEL)
             .desc(
-                "Sets the runtime log level. Possible values are: OFF, ERROR, "
-                    + "WARNING, INFO, DEBUG and TRACE. Default: INFO.")
+                "Sets the runtime log level. Possible values are: "
+                    + getPossibleLogLevels()
+                    + ". Default: info.")
             .build();
     var loggerConnectOption =
         cliOptionBuilder()
@@ -397,11 +430,6 @@ public class Main {
                 "Tells the compiler to not compile dependencies when performing static"
                     + " compilation.")
             .build();
-    var noGlobalCacheOption =
-        cliOptionBuilder()
-            .longOpt(NO_GLOBAL_CACHE_OPTION)
-            .desc("Tells the compiler not to write compiled data to the global cache locations.")
-            .build();
 
     var irCachesOption =
         cliOptionBuilder()
@@ -466,6 +494,11 @@ public class Main {
             .longOpt(ENABLE_STATIC_ANALYSIS_OPTION)
             .desc("Enable static analysis (Experimental type inference).")
             .build();
+    var treatWarningsAsErrorsOption =
+        cliOptionBuilder()
+            .option(TREAT_WARNINGS_AS_ERRORS_OPTION)
+            .desc("Treat compiler warnings as errors.")
+            .build();
 
     var systemPropOption =
         cliOptionBuilder()
@@ -504,6 +537,9 @@ public class Main {
         .addOption(secureRpcPortOption)
         .addOption(secureDataPortOption)
         .addOption(uuidOption)
+        .addOption(projectIdOption)
+        .addOption(cloudProjectIdOption)
+        .addOption(cloudProjectSessionIdOption)
         .addOption(pathOption)
         .addOption(inProjectOption)
         .addOption(version)
@@ -518,7 +554,6 @@ public class Main {
         .addOption(noReadIrCachesOption)
         .addOption(compileOption)
         .addOption(noCompileDependenciesOption)
-        .addOption(noGlobalCacheOption)
         .addOptionGroup(cacheOptionsGroup)
         .addOption(autoParallelism)
         .addOption(skipGraalVMUpdater)
@@ -526,7 +561,8 @@ public class Main {
         .addOption(warningsLimitOption)
         .addOption(disablePrivateCheckOption)
         .addOption(systemPropOption)
-        .addOption(enableStaticAnalysisOption);
+        .addOption(enableStaticAnalysisOption)
+        .addOption(treatWarningsAsErrorsOption);
 
     return options;
   }
@@ -590,9 +626,9 @@ public class Main {
             : join(new Contact(authorName, authorEmail), nil());
 
     var edition = DefaultEdition.getDefaultEdition();
-    if (logger.isTraceEnabled()) {
+    if (LOGGER.isTraceEnabled()) {
       var baseEdition = edition.parent().getOrElse(() -> "<no-base>");
-      logger.trace("Creating a new project " + name + " based on edition [" + baseEdition + "].");
+      LOGGER.trace("Creating a new project " + name + " based on edition [" + baseEdition + "].");
     }
 
     var template =
@@ -617,57 +653,78 @@ public class Main {
             authors,
             nil(),
             "",
-            Option$.MODULE$.empty());
+            Option$.MODULE$.empty(),
+            nil(),
+            Option$.MODULE$.empty(),
+            false);
     throw exitSuccess();
   }
 
   /**
    * Handles the `--compile` CLI option.
    *
-   * @param packagePath the path to the package being compiled
+   * @param path the path to the package or file being compiled
    * @param shouldCompileDependencies whether the dependencies of that package should also be
    *     compiled
-   * @param shouldUseGlobalCache whether or not the compilation result should be written to the
-   *     global cache
    * @param shouldUseIrCaches whether or not IR caches should be used.
-   * @param enableStaticAnalysis whether or not static type checking should be enabled
+   * @param disablePrivateCheck whether or not the private check should be disabled
+   * @param enableStaticAnalysis whether or not static type checking, and other static analysis,
+   *     should be enabled
+   * @param treatWarningsAsErrors whether or not warnings should be treated as errors
    * @param logLevel the logging level
    * @param logMasking whether or not log masking is enabled
    */
   private void compile(
-      String packagePath,
+      String cwd,
+      String path,
       boolean shouldCompileDependencies,
-      boolean shouldUseGlobalCache,
       boolean shouldUseIrCaches,
+      boolean disablePrivateCheck,
       boolean enableStaticAnalysis,
+      boolean treatWarningsAsErrors,
       Level logLevel,
-      boolean logMasking) {
-    var file = new File(packagePath);
-    if (!file.exists() || !file.isDirectory()) {
-      throw exitFail("No package exists at " + file + ".");
-    }
+      boolean logMasking)
+      throws IOException {
+    var fileAndProject = Utils.findFileAndProject(cwd, path, null);
+    assert fileAndProject != null;
 
+    boolean isProjectMode = fileAndProject._1();
+    String projectPath = fileAndProject._3();
     var context =
         new PolyglotContext(
             ContextFactory.create()
-                .projectRoot(packagePath)
+                .projectRoot(projectPath)
                 .in(System.in)
                 .out(System.out)
-                .logLevel(logLevel)
+                .logLevel(Converter.toJavaLevel(logLevel))
                 .logMasking(logMasking)
                 .enableIrCaches(shouldUseIrCaches)
+                .disablePrivateCheck(disablePrivateCheck)
                 .enableStaticAnalysis(enableStaticAnalysis)
+                .treatWarningsAsErrors(treatWarningsAsErrors)
                 .strictErrors(true)
-                .useGlobalIrCacheLocation(shouldUseGlobalCache)
                 .build());
 
-    var topScope = context.getTopScope();
     try {
-      topScope.compile(shouldCompileDependencies, scala.Option.empty());
+      if (isProjectMode) {
+        var topScope = context.getTopScope();
+        topScope.compile(shouldCompileDependencies, scala.Option.empty());
+      } else {
+        context.evalModule(fileAndProject._2());
+      }
       throw exitSuccess();
     } catch (Throwable t) {
-      logger.error("Unexpected internal error", t);
-      throw exitFail("Unexpected internal error");
+      boolean compilationFailed =
+          t instanceof PolyglotException polyglotException && polyglotException.isSyntaxError();
+      if (compilationFailed) {
+        var reason = treatWarningsAsErrors ? "warnings or errors" : "errors";
+        throw exitFail("Compilation failed due to " + reason + ".");
+      } else {
+        String message = "Unexpected internal error: " + t.getMessage();
+        LOGGER.error(message, t);
+        throw exitFail(message);
+      }
+
     } finally {
       context.context().close();
     }
@@ -687,11 +744,13 @@ public class Main {
    * @param disablePrivateCheck Is private modules check disabled. If yes, `private` keyword is
    *     ignored.
    * @param enableStaticAnalysis whether or not static type checking should be enabled
+   * @param treatWarningsAsErrors whether or not warnings should be treated as errors
    * @param inspect shall inspect option be enabled
    * @param executionEnvironment name of the execution environment to use during execution or {@code
    *     null}
    */
   private void handleRun(
+      String cwd,
       String path,
       List<String> additionalArgs,
       String projectPath,
@@ -701,15 +760,14 @@ public class Main {
       boolean disablePrivateCheck,
       boolean enableAutoParallelism,
       boolean enableStaticAnalysis,
+      boolean treatWarningsAsErrors,
       boolean enableDebugServer,
       boolean inspect,
       String executionEnvironment,
       int warningsLimit)
       throws IOException {
-    var fileAndProject = Utils.findFileAndProject(path, projectPath);
-    if (fileAndProject == null) {
-      throw exitFail("Cannot find " + path + " and " + projectPath);
-    }
+    var fileAndProject = Utils.findFileAndProject(cwd, path, projectPath);
+    assert fileAndProject != null;
     var projectMode = fileAndProject._1();
     var file = fileAndProject._2();
     var mainFile = file;
@@ -730,16 +788,23 @@ public class Main {
     var projectRoot = fileAndProject._3();
     var options = new HashMap<String, String>();
 
+    String pythonResourceDir = null;
+    if (PythonHomeFinder.findPythonHome() instanceof Path pythonHome) {
+      pythonResourceDir = pythonHome.getParent().toFile().getCanonicalPath();
+    }
+
     var factory =
         ContextFactory.create()
             .projectRoot(projectRoot)
-            .logLevel(logLevel)
+            .logLevel(Converter.toJavaLevel(logLevel))
             .logMasking(logMasking)
             .enableIrCaches(enableIrCaches)
             .disablePrivateCheck(disablePrivateCheck)
+            .pythonResourceDir(pythonResourceDir)
             .strictErrors(true)
             .enableAutoParallelism(enableAutoParallelism)
             .enableStaticAnalysis(enableStaticAnalysis)
+            .treatWarningsAsErrors(treatWarningsAsErrors)
             .executionEnvironment(executionEnvironment != null ? executionEnvironment : "live")
             .warningsLimit(warningsLimit)
             .options(options);
@@ -773,7 +838,7 @@ public class Main {
     } catch (RuntimeException e) {
       // forces computation of the exception message sooner than context is closed
       // should work around issues seen at #11127
-      logger.debug("Execution failed with " + e.getMessage());
+      LOGGER.debug("Execution failed with " + e.getMessage());
       throw e;
     } finally {
       context.context().close();
@@ -793,12 +858,18 @@ public class Main {
    */
   private void genDocs(
       String docsFormat,
+      String cwd,
       String projectPath,
       Level logLevel,
       boolean logMasking,
-      boolean enableIrCaches) {
+      boolean enableIrCaches)
+      throws IOException {
     if (projectPath == null || projectPath.isEmpty()) {
       throw exitFail("Specify path to a project with --in-project option");
+    }
+    var fileAndProject = Utils.findFileAndProject(cwd, projectPath, null);
+    if (fileAndProject == null) {
+      throw exitFail("Project specified in --in-project option does not exist: " + projectPath);
     }
     generateDocsFrom(docsFormat, projectPath, logLevel, logMasking, enableIrCaches);
     throw exitSuccess();
@@ -816,7 +887,7 @@ public class Main {
                 .projectRoot(path)
                 .in(System.in)
                 .out(System.out)
-                .logLevel(logLevel)
+                .logLevel(Converter.toJavaLevel(logLevel))
                 .logMasking(logMasking)
                 .enableIrCaches(enableIrCaches)
                 .build());
@@ -847,7 +918,7 @@ public class Main {
       DependencyPreinstaller.preinstallDependencies(new File(projectPath), logLevel);
       throw exitSuccess();
     } catch (RuntimeException error) {
-      logger.error("Dependency installation failed: " + error.getMessage(), error);
+      LOGGER.error("Dependency installation failed: " + error.getMessage(), error);
       throw exitFail("Dependency installation failed: " + error.getMessage());
     }
   }
@@ -890,22 +961,19 @@ public class Main {
       } else {
         // Opportunistically parse arguments and convert to ints.
         // This avoids conversions in main function.
-        var parsedArgs =
-            additionalArgs.stream()
-                .map(
-                    arg -> {
-                      try {
-                        return Integer.valueOf(arg);
-                      } catch (NumberFormatException ex) {
-                        return arg;
-                      }
-                    })
-                .toList();
         var listOfArgs = nil();
-        for (var e : parsedArgs) {
+        for (var arg : additionalArgs) {
+          Object e;
+          try {
+            e = Integer.valueOf(arg);
+          } catch (NumberFormatException ex) {
+            e = arg;
+          }
           listOfArgs = join(e, listOfArgs);
         }
-        var res = main.execute(listOfArgs.reverse());
+        listOfArgs = listOfArgs.reverse();
+        LOGGER.debug("Executing the main function with arguments {}", listOfArgs.mkString(", "));
+        var res = main.execute(listOfArgs);
         if (!res.isNull()) {
           var textRes = res.isString() ? res.asString() : res.toString();
           stdout(textRes);
@@ -938,13 +1006,15 @@ public class Main {
    * @param logMasking is the log masking enabled
    * @param enableIrCaches are IR caches enabled
    * @param enableStaticAnalysis whether or not static type checking should be enabled
+   * @param treatWarningsAsErrors whether or not warnings should be treated as errors
    */
   private void runRepl(
       String projectPath,
       Level logLevel,
       boolean logMasking,
       boolean enableIrCaches,
-      boolean enableStaticAnalysis) {
+      boolean enableStaticAnalysis,
+      boolean treatWarningsAsErrors) {
     var mainMethodName = "internal_repl_entry_point___";
     var dummySourceToTriggerRepl =
         """
@@ -963,12 +1033,13 @@ public class Main {
                 .projectRoot(projectRoot)
                 .messageTransport(replTransport())
                 .enableDebugServer(true)
-                .logLevel(logLevel)
+                .logLevel(Converter.toJavaLevel(logLevel))
                 .executionEnvironment("live")
                 .logMasking(logMasking)
                 .enableIrCaches(enableIrCaches)
                 .disableLinting(true)
                 .enableStaticAnalysis(enableStaticAnalysis)
+                .treatWarningsAsErrors(treatWarningsAsErrors)
                 .build());
     var mainModule = context.evalModule(dummySourceToTriggerRepl, replModuleName);
     runMain(mainModule, null, Collections.emptyList(), mainMethodName);
@@ -986,7 +1057,7 @@ public class Main {
               var repl = futureRepl.get();
               return new DebuggerSessionManagerEndpoint(repl, peer);
             } catch (InterruptedException | ExecutionException ex) {
-              logger.error("Cannot initialize REPL transport", ex);
+              LOGGER.error("Cannot initialize REPL transport", ex);
             }
           }
           return null;
@@ -1012,14 +1083,16 @@ public class Main {
     var found =
         Stream.of(Level.values()).filter(x -> name.equals(x.name().toLowerCase())).findFirst();
     if (found.isEmpty()) {
-      var possible =
-          Stream.of(Level.values())
-              .map(x -> x.toString().toLowerCase())
-              .collect(Collectors.joining(", "));
-      throw exitFail("Invalid log level. Possible values are " + possible + ".");
+      throw exitFail("Invalid log level. Possible values are " + getPossibleLogLevels() + ".");
     } else {
       return found.get();
     }
+  }
+
+  private static String getPossibleLogLevels() {
+    return Stream.of(Level.values())
+        .map(x -> x.toString().toLowerCase())
+        .collect(Collectors.joining(", "));
   }
 
   /** Parses an URI that specifies the logging service connection. */
@@ -1046,11 +1119,13 @@ public class Main {
   /**
    * Main entry point for the CLI program.
    *
+   * @param cwd current working directory to use
    * @param line the provided command line arguments
    * @param logLevel the provided log level
    * @param logMasking the flag indicating if the log masking is enabled
    */
-  final void mainEntry(CommandLine line, Level logLevel, boolean logMasking) throws IOException {
+  final void mainEntry(String cwd, CommandLine line, Level logLevel, boolean logMasking)
+      throws IOException {
     if (line.hasOption(HELP_OPTION)) {
       printHelp();
       throw exitSuccess();
@@ -1118,21 +1193,23 @@ public class Main {
     if (line.hasOption(COMPILE_OPTION)) {
       var packagePath = line.getOptionValue(COMPILE_OPTION);
       var shouldCompileDependencies = !line.hasOption(NO_COMPILE_DEPENDENCIES_OPTION);
-      var shouldUseGlobalCache = !line.hasOption(NO_GLOBAL_CACHE_OPTION);
-      var shouldUseIrCaches = !line.hasOption(NO_IR_CACHES_OPTION);
 
       compile(
+          cwd,
           packagePath,
           shouldCompileDependencies,
-          shouldUseGlobalCache,
-          shouldUseIrCaches,
+          shouldEnableIrCaches(line),
+          line.hasOption(DISABLE_PRIVATE_CHECK_OPTION),
           line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION),
+          line.hasOption(TREAT_WARNINGS_AS_ERRORS_OPTION),
           logLevel,
           logMasking);
     }
 
+    LOGGER.debug("Original working directory={}, cwd={}", cwd, System.getProperty("user.dir"));
     if (line.hasOption(RUN_OPTION)) {
       handleRun(
+          cwd,
           line.getOptionValue(RUN_OPTION),
           Arrays.asList(line.getArgs()),
           line.getOptionValue(IN_PROJECT_OPTION),
@@ -1142,6 +1219,7 @@ public class Main {
           line.hasOption(DISABLE_PRIVATE_CHECK_OPTION),
           line.hasOption(AUTO_PARALLELISM_OPTION),
           line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION),
+          line.hasOption(TREAT_WARNINGS_AS_ERRORS_OPTION),
           line.hasOption(REPL_OPTION),
           line.hasOption(INSPECT_OPTION),
           line.getOptionValue(EXECUTION_ENVIRONMENT_OPTION),
@@ -1155,11 +1233,13 @@ public class Main {
           logLevel,
           logMasking,
           shouldEnableIrCaches(line),
-          line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION));
+          line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION),
+          line.hasOption(TREAT_WARNINGS_AS_ERRORS_OPTION));
     }
     if (line.hasOption(DOCS_OPTION)) {
       genDocs(
           line.getOptionValue(DOCS_OPTION),
+          cwd,
           line.getOptionValue(IN_PROJECT_OPTION),
           logLevel,
           logMasking,
@@ -1183,7 +1263,30 @@ public class Main {
    * @param line the command-line
    * @return `true` if caching should be enabled, `false`, otherwise
    */
-  private static boolean shouldEnableIrCaches(CommandLine line) {
+  private boolean shouldEnableIrCaches(CommandLine line) {
+    if (line.hasOption(ENABLE_STATIC_ANALYSIS_OPTION)) {
+      if (line.hasOption(IR_CACHES_OPTION)) {
+        throw exitFail(
+          ""
+                + ENABLE_STATIC_ANALYSIS_OPTION
+                + " requires IR caches to be disabled, so --"
+                + IR_CACHES_OPTION
+                + " option cannot be used in combination with this flag.");
+      }
+      return false;
+    }
+    if (line.hasOption(DISABLE_PRIVATE_CHECK_OPTION)) {
+      if (line.hasOption(IR_CACHES_OPTION)) {
+        throw exitFail(
+            ""
+                + DISABLE_PRIVATE_CHECK_OPTION
+                + " requires IR caches to be disabled, so --"
+                + IR_CACHES_OPTION
+                + " option cannot be used in combination with this flag.");
+      }
+      return false;
+    }
+
     if (line.hasOption(IR_CACHES_OPTION)) {
       return true;
     } else if (line.hasOption(NO_IR_CACHES_OPTION)) {
@@ -1209,30 +1312,41 @@ public class Main {
       java.util.concurrent.Callable<A> main)
       throws IOException {
     var path = profilingConfig.profilingPath();
-    var sampler =
-        path.isDefined() ? OutputStreamSampler.ofFile(path.get().toFile()) : new NoopSampler();
+    var events = profilingConfig.profilingEventsLogPath();
+    var pathOS = path.isEmpty() ? null : Files.newOutputStream(path.get());
+    var eventsOS = events.isEmpty() ? null : Files.newOutputStream(events.get());
+    var sampler = MethodsSampler.create(pathOS, eventsOS);
     sampler.start();
-    profilingConfig
-        .profilingTime()
-        .foreach(timeout -> sampler.scheduleStop(timeout.length(), timeout.unit(), executor));
+    profilingConfig.profilingTime().foreach(timeout -> sampler.scheduleStop(timeout));
     scala.sys.package$.MODULE$.addShutdownHook(
         () -> {
           try {
-            sampler.stop();
+            sampler.close();
           } catch (IOException ex) {
-            logger.error("Error stopping sampler", ex);
+            LOGGER.error("Error stopping sampler", ex);
           }
           return BoxedUnit.UNIT;
         });
 
-    try {
+    try (var _ =
+            ObservedMessage.observe(
+                LoggerFactory.getLogger("org.enso"),
+                (ev) -> {
+                  sampler.log(ev.getInstant(), ev.getFormattedMessage());
+                });
+        var _ =
+            ObservedMessage.observe(
+                LoggerFactory.getLogger("enso"),
+                (ev) -> {
+                  sampler.log(ev.getInstant(), ev.getFormattedMessage());
+                }); ) {
       return main.call();
     } catch (IOException | RuntimeException ex) {
       throw ex;
     } catch (Exception ex) {
       throw new IOException(ex);
     } finally {
-      sampler.stop();
+      sampler.close();
     }
   }
 
@@ -1272,11 +1386,11 @@ public class Main {
     } catch (InvalidPathException e) {
       throw new WrongOption("Profiling path is invalid");
     }
-    FiniteDuration profilingTime = null;
+    Duration profilingTime = null;
     try {
       var time = line.getOptionValue(PROFILING_TIME);
       if (time != null) {
-        profilingTime = FiniteDuration.apply(Integer.parseInt(time), TimeUnit.SECONDS);
+        profilingTime = Duration.of(Integer.parseInt(time), TimeUnit.SECONDS.toChronoUnit());
       }
     } catch (NumberFormatException e) {
       throw new WrongOption("Profiling time should be an integer");
@@ -1321,12 +1435,148 @@ public class Main {
     System.err.println(msg);
   }
 
+  /**
+   * Checks if JVM mode should be enabled in a project defined by arguments, based on a project's
+   * config file, if any.
+   *
+   * @param cwd current working directory or {@code null}
+   * @param line parsed command line arguments
+   * @return true, if project should be launched in JVM mode, false otherwise
+   */
+  private boolean isJvmModeEnabled(String cwd, CommandLine line) {
+    try {
+      var projectPath = line.getOptionValue(IN_PROJECT_OPTION);
+      var path = line.getOptionValue(RUN_OPTION);
+      if (path == null) {
+        return false;
+      }
+
+      var fileAndProject = Utils.findFileAndProject(cwd, path, projectPath);
+      if (fileAndProject._3() == null) {
+        return false;
+      } else {
+        var configFile =
+            new File(fileAndProject._3())
+                .toPath()
+                .resolve(org.enso.pkg.Config.ensoPackageConfigName());
+        if (!configFile.toFile().exists()) {
+          return false;
+        } else {
+          try (var fileReader = new FileReader(configFile.toFile())) {
+            return org.enso.pkg.Config.fromYaml(fileReader)
+                .map(c -> c.jvm().getOrElse(() -> false))
+                .getOrElse(() -> false);
+          }
+        }
+      }
+    } catch (IOException e) {
+      return false;
+    }
+  }
+
+  private void launchJvm(
+      String originalCwdOrNull,
+      CommandLine line,
+      Map<String, String> props,
+      File component,
+      File javaExecutable)
+      throws IOException, InterruptedException {
+    var useJNI = true;
+    var commandAndArgs = new ArrayList<String>();
+    if (originalCwdOrNull != null) {
+      commandAndArgs.add("-Denso.user.dir=" + originalCwdOrNull);
+    }
+    if (!useJNI) {
+      commandAndArgs.add(javaExecutable.getPath());
+    }
+    var assertsOn = false;
+    assert assertsOn = true;
+    if (assertsOn) {
+      commandAndArgs.add("-ea");
+    }
+    if (props != null) {
+      for (var e : props.entrySet()) {
+        commandAndArgs.add("-D" + e.getKey() + "=" + e.getValue());
+      }
+    }
+    commandAndArgs.add("--sun-misc-unsafe-memory-access=allow");
+    commandAndArgs.add("--enable-native-access=org.graalvm.truffle");
+    commandAndArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
+    if (!component.isDirectory()) {
+      throw new IOException("Cannot find " + component + " directory");
+    }
+    JVM jvm;
+    if (useJNI) {
+      commandAndArgs.add("--module-path=" + component.getPath());
+      commandAndArgs.add("-Djdk.module.main=org.enso.runner");
+      var javaHome = javaExecutable.getParentFile().getParentFile();
+      jvm = JVM.create(javaHome, commandAndArgs.toArray(new String[0]));
+      commandAndArgs.clear();
+    } else {
+      commandAndArgs.add("--module-path");
+      commandAndArgs.add(component.getPath());
+      commandAndArgs.add("-m");
+      commandAndArgs.add("org.enso.runner/org.enso.runner.Main");
+      jvm = null;
+    }
+    var it = line.iterator();
+    while (it.hasNext()) {
+      var op = it.next();
+      if (JVM_OPTION.equals(op.getLongOpt())) {
+        continue;
+      }
+      if (SYSTEM_PROPERTY.equals(op.getLongOpt())) {
+        continue;
+      }
+      var longName = op.getLongOpt();
+      if (longName != null) {
+        commandAndArgs.add("--" + longName);
+      } else {
+        commandAndArgs.add("-" + op.getOpt());
+      }
+      var values = op.getValuesList();
+      if (values != null) {
+        commandAndArgs.addAll(values);
+      }
+    }
+    commandAndArgs.addAll(line.getArgList());
+    int exitCode;
+    if (jvm != null) {
+      jvm.executeMain("org/enso/runner/Main", commandAndArgs.toArray(new String[0]));
+      // the above call should never return
+      exitCode = 1;
+    } else {
+      var pb = new ProcessBuilder();
+      pb.inheritIO();
+      pb.command(commandAndArgs);
+      var p = pb.start();
+      exitCode = p.waitFor();
+    }
+    if (exitCode == 0) {
+      throw exitSuccess();
+    } else {
+      throw doExit(exitCode);
+    }
+  }
+
   private void launch(String[] args) throws IOException, InterruptedException, URISyntaxException {
     var line = preprocessArguments(args);
 
+    String originalCwdOrNull = null;
+    if (line.hasOption(IN_PROJECT_OPTION)) {
+      originalCwdOrNull = Utils.adjustCwdToProject(line.getOptionValue(IN_PROJECT_OPTION));
+    } else if (line.hasOption(RUN_OPTION)) {
+      originalCwdOrNull = Utils.adjustCwdToProject(line.getOptionValue(RUN_OPTION));
+    }
+
     var logMasking = new boolean[1];
-    var logLevel = setupLogging(line, logMasking);
     var props = parseSystemProperties(line);
+    if (props != null) {
+      for (var e : props.entrySet()) {
+        System.setProperty(e.getKey(), e.getValue());
+      }
+    }
+    var logLevel = setupLogging(line, logMasking);
 
     var loc = Main.class.getProtectionDomain().getCodeSource().getLocation();
     var component = new File(loc.toURI().resolve("..")).getAbsoluteFile();
@@ -1334,94 +1584,44 @@ public class Main {
       component = new File(component, "component");
     }
     assert checkOutdatedLauncher(new File(loc.toURI()), component) || true;
-    if (line.hasOption(JVM_OPTION)) {
+    var hasJVMOption = line.hasOption(JVM_OPTION);
+    var jvmInProjectEnforced = isJvmModeEnabled(originalCwdOrNull, line);
+    if (hasJVMOption || jvmInProjectEnforced) {
       var jvm = line.getOptionValue(JVM_OPTION);
       var current = System.getProperty("java.home");
       if (jvm == null) {
         jvm = current;
       }
       var shouldLaunchJvm = current == null || !current.equals(jvm);
-      if (!shouldLaunchJvm) {
-        stderr(JVM_OPTION + " option has no effect - already running in JVM " + current);
+      if (shouldLaunchJvm) {
+        var javaExecutable =
+            jvm != null
+                ? new File(new File(new File(jvm), "bin"), "java").getAbsoluteFile()
+                : JavaFinder.findJavaExecutable();
+        if (javaExecutable != null) {
+          launchJvm(originalCwdOrNull, line, props, component, javaExecutable);
+          return;
+        } else {
+          throw exitFail("Cannot find java executable to run in JVM mode. JVM mode " +
+              "was enforced either by `--jvm` option or by project configuration.");
+        }
+      }
+    }
+    if (HostEnsoUtils.isAot()) {
+      if (jvmInProjectEnforced) {
+        throw exitFail("Cannot find java executable to run in JVM mode");
       } else {
-        var commandAndArgs = new ArrayList<String>();
-        if (jvm == null) {
-          var javaExe = JavaFinder.findJavaExecutable();
-          if (javaExe == null) {
-            throw exitFail("Cannot find java executable");
+        if (System.getProperty("java.home") == null) {
+          var exe = JavaFinder.findJavaExecutable();
+          if (exe != null) {
+            var path = exe.getParentFile().getParentFile().getAbsolutePath();
+            System.setProperty("java.home", path);
+            LOGGER.debug("Setting java.home property for AOT mode to {}", path);
           }
-          commandAndArgs.add(javaExe);
-        } else {
-          commandAndArgs.add(new File(new File(new File(jvm), "bin"), "java").getAbsolutePath());
-        }
-        var jvmOptions = System.getenv("JAVA_OPTS");
-        if (jvmOptions != null) {
-          for (var op : jvmOptions.split(" ")) {
-            if (op.isEmpty()) {
-              continue;
-            }
-            commandAndArgs.add(op);
-          }
-        }
-        var assertsOn = false;
-        assert assertsOn = true;
-        if (assertsOn) {
-          commandAndArgs.add("-ea");
-        }
-        if (props != null) {
-          for (var e : props.entrySet()) {
-            commandAndArgs.add("-D" + e.getKey() + "=" + e.getValue());
-          }
-        }
-        commandAndArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
-        commandAndArgs.add("--module-path");
-        if (!component.isDirectory()) {
-          throw new IOException("Cannot find " + component + " directory");
-        }
-        commandAndArgs.add(component.getPath());
-        commandAndArgs.add("-m");
-        commandAndArgs.add("org.enso.runner/org.enso.runner.Main");
-        var it = line.iterator();
-        while (it.hasNext()) {
-          var op = it.next();
-          if (JVM_OPTION.equals(op.getLongOpt())) {
-            continue;
-          }
-          if (SYSTEM_PROPERTY.equals(op.getLongOpt())) {
-            continue;
-          }
-          var longName = op.getLongOpt();
-          if (longName != null) {
-            commandAndArgs.add("--" + longName);
-          } else {
-            commandAndArgs.add("-" + op.getOpt());
-          }
-          var values = op.getValuesList();
-          if (values != null) {
-            commandAndArgs.addAll(values);
-          }
-        }
-        commandAndArgs.addAll(line.getArgList());
-        var pb = new ProcessBuilder();
-        pb.inheritIO();
-        pb.command(commandAndArgs);
-        var p = pb.start();
-        var exitCode = p.waitFor();
-        if (exitCode == 0) {
-          throw exitSuccess();
-        } else {
-          throw doExit(exitCode);
         }
       }
     }
-
-    if (props != null) {
-      for (var e : props.entrySet()) {
-        System.setProperty(e.getKey(), e.getValue());
-      }
-    }
-
-    launch(line, logLevel, logMasking[0]);
+    handleLaunch(originalCwdOrNull, line, logLevel, logMasking[0]);
   }
 
   final CommandLine preprocessArguments(String... args) {
@@ -1429,7 +1629,7 @@ public class Main {
     try {
       var startParsing = System.currentTimeMillis();
       var line = parser.parse(CLI_OPTIONS, args);
-      logger.trace(
+      LOGGER.trace(
           "Parsing Language Server arguments took {0}ms",
           System.currentTimeMillis() - startParsing);
       return line;
@@ -1451,11 +1651,32 @@ public class Main {
       connectionUri = null;
     }
     logMasking[0] = !line.hasOption(NO_LOG_MASKING);
+    var projectIdOptional = line.getOptionValue(LanguageServerApi.PROJECT_ID_OPTION);
+    String projectId;
+    try {
+      // sanity check
+      projectId =
+          projectIdOptional != null
+              ? UUID.fromString(projectIdOptional).toString()
+              : "00000000-0000-0000-0000-000000000000";
+    } catch (IllegalArgumentException e) {
+      projectId = "00000000-0000-0000-0000-000000000000";
+    }
+    if (line.hasOption(LanguageServerApi.CLOUD_PROJECT_ID_OPTION)) {
+      MDC.put("projectId", line.getOptionValue(LanguageServerApi.CLOUD_PROJECT_ID_OPTION));
+    }
+    if (line.hasOption(LanguageServerApi.CLOUD_PROJECT_SESSION_ID_OPTION)) {
+      MDC.put(
+          "projectSessionId",
+          line.getOptionValue(LanguageServerApi.CLOUD_PROJECT_SESSION_ID_OPTION));
+    }
+    MDC.put("projectLocalId", projectId);
     RunnerLogging.setup(connectionUri, logLevel, logMasking[0]);
     return logLevel;
   }
 
-  private void launch(CommandLine line, Level logLevel, boolean logMasking) {
+  private final void handleLaunch(
+      String cwd, CommandLine line, Level logLevel, boolean logMasking) {
     if (line.hasOption(LANGUAGE_SERVER_OPTION)) {
       try {
         var conf = parseProfilingConfig(line);
@@ -1480,12 +1701,14 @@ public class Main {
               conf,
               ExecutionContext.global(),
               () -> {
-                mainEntry(line, logLevel, logMasking);
+                mainEntry(cwd, line, logLevel, logMasking);
                 return BoxedUnit.UNIT;
               });
+        } catch (ExitCode ex) {
+          throw exitFail(ex.getMessage());
         } catch (IOException ex) {
-          if (logger.isDebugEnabled()) {
-            logger.error("Error during execution", ex);
+          if (LOGGER.isDebugEnabled()) {
+            LOGGER.error("Error during execution", ex);
           }
           throw exitFail("Command failed with an error: " + ex.getMessage());
         }
@@ -1493,10 +1716,6 @@ public class Main {
         throw exitFail(e.getMessage());
       }
     }
-  }
-
-  protected String getLanguageId() {
-    return LanguageInfo.ID;
   }
 
   /**
